--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 /* streak commit */
 
+/* streak commit */
+
 @font-face {
     font-family: 'sans';
     src: url(./EncodeSansSemiExpanded-Medium.ttf);
